# SimplePackage

./: pyproject.toml
tests/: test_simplepackage.py
