[tool.poetry]
name = "SimplePackage"
version = "0.1.0"
description = ""
authors = ["Shiri Viner <shiri.viner@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "~2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
